--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
         "laravel-vite-plugin": "^2.0.0",
         "tailwindcss": "^4.0.0",
         "vite": "^7.0.4"
+    },
+    "dependencies": {
+        "admin-lte": "^4.0.0-rc3",
+        "bootstrap": "^5.3.8",
+        "daterangepicker": "^3.1.0",
+        "jquery": "^3.7.1",
+        "moment": "^2.30.1"
     }
 }
